Fixed too-long author lists overlapping.

--- a/sites/all/themes/lacuna_stories/sass/components/views.scss
+++ b/sites/all/themes/lacuna_stories/sass/components/views.scss
@@ -205,8 +205,7 @@ $views-link-hover-color: #1588BA;
   .views-row {
     float: left;
     width: 150px;
-    margin: 20px 20px 65px 20px;
-    height: 350px;
+    margin: 20px 20px 20px 20px;
   }
   .views-exposed-widget {
     margin-top: 0px;
